Think I've got it all down now!

--- a/gradle.properties
+++ b/gradle.properties
@@ -56,4 +56,4 @@ mod_group_id=net.riverafmod.eventcountdown
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=River A. Frank
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=§oTick, tick, §r§lEVENT§r!\n This API mod adds a simple, easy to use system for delays in Minecraft.
+mod_description=§oTick, tick, §r§lEVENT§r!\n This API mod adds a fairly simple, pretty easy to use system for delays in Minecraft.
